V1.6 Add beego WebUI and Restful API for C/S model. Data be store in Sqlite3. not used cache. (warning!!! just add install/domain, exclude server/deploy)
I will add patch about master server to manage all client(master/slave).
I will add redis/zookeeper to store cache or properties, async...

+ add detail README.md information.
+ adjust find-bugs